--- a/index.html
+++ b/index.html
@@ -303,6 +303,7 @@
 									Updating information on the products page, adding options, and editing the order form of the eccomerce sites.
 								</p>
 								<img src="img/ec-site.png" alt="">
+								<a href="https://www.i-nobori.com/" target="_blank" class="to-page">View Website <i class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--2-->
 							<div class="col">
