--- a/jp.html
+++ b/jp.html
@@ -278,6 +278,7 @@
 									デザインの部分で、いくつか同じデザインの派生ページが発生した為、マークアップ・スタイル記述はパーツを細分化して、どのブロックでも使えるレスポンシブサイト作成。
 								</p>
 								<img src="img/ec-site.png" alt="">
+								<a href="https://www.i-nobori.com/" target="_blank" class="to-page">View Website <i class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--2-->
 							<div class="col">
