--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="portfolio, portfolio design, portfolio website, personal portfolio" />
 	<meta name="description" content="Welcome to Mya Thet Chel's Portfolio Website. Web Designer and Markup Engineer" />
 	<title>Portfolio - Mya Thet Chel</title>
-	<link rel="icon" type="image/x-icon" href="img/favicon.png">
+	<link rel="icon" type="image/x-icon" href="img/mya-favicon.png">
 	<link rel="stylesheet" href="css/stye.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
 		integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -37,9 +37,6 @@
 		<div id="navbar">
 			<nav class="navigation">
 				<ul>
-					<li class="nav-logo-wrap">
-						<a href="#"><img src="img/favicon.png" alt="" class="nav-logo"></a>
-					</li>
 					<li class="nav-side-menu">
 						<a href="#about"><span>About</span></a>
 						<a href="#skills">Skills & Languages</a>
@@ -61,7 +58,6 @@
 				<div id="g-nav-list">
 					<!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
 					<ul>
-						<li><a href="#"><img src="img/favicon.png" alt=""></a></li>
 						<li><a href="#about">About</a></li>
 						<li><a href="#skills">Skills & Languages</a></li>
 						<li><a href="#experience">Experience</a></li>
@@ -84,28 +80,16 @@
 					<h1><span>About</span></h1>
 					<div class="about-row">
 						<div>
-							<img src="img/my-profile.png" alt="">
-						</div>
-						<div>
 							<script src="https://unpkg.com/ityped@0.0.10"></script>
 							<h3>Hello!<br>I am Mya Thet Chel<br><span class="ityped"></span></h3>
 							<script>
 								window.ityped.init(document.querySelector('.ityped'), {
-									strings: ['I am Web Designer', 'and Markup Engineer.', 'Take a look at my porfolio website!'],
+									strings: ['Design Engineer(UI Design and Development)', 'Take a look at my porfolio website!'],
 									loop: true
 								})
 							</script>
 							<p>
-								A Meticulous web developer requires creativity, a collaborative work environment, and
-								critical thinking.<br>
-								Over 5 years of experience as a creative web developer dedicated to delivering compelling
-								and attractive websites to meet customer satisfaction.<br>
-								Proven experience developing consumer-focused websites using HTML, CSS, WordPress,
-								Illustrator, Photoshop, PHP, and JavaScript as well as creating wire design with Adobe XD
-								and Figma.<br>
-								Innovative and energetic mind with an ability to follow industry and technological trends,
-								and facilitate early adoption of innovations.
-	
+								I am a passionate Design Engineer specializing in UI design and development, with over 5 years of experience in the digital realm. Equipped with a comprehensive toolkit including HTML, CSS, and a range of UI libraries such as Vue, Vuetify, Storybook and Typescript, as well as proficiency in Figma and Adobe XD, I approach each project with boundless enthusiasm and a relentless drive for innovation.
 							</p>
 							<ul>
 								<li>Date of Birth: 12 May 1996</li>
@@ -115,6 +99,9 @@
 								<li>Address: Koto-ku, Tokyo, Japan</li>
 								<li>Email: <a href="mailto:myathetchel00@gmail.com">myathetchel00@gmail.com</a></li>
 							</ul>
+						</div>
+						<div>
+							<img src="img/profile.png" alt="">
 						</div>
 					</div>
 	
@@ -127,18 +114,20 @@
 					<div class="skill-wrap">
 						<div><img class="vector-icon" src="svg/html.svg" alt="HTML5">HTML</div>
 						<div><img class="vector-icon" src="svg/css3.svg" alt="CSS">CSS</div>
+						<div><img class="vector-icon" src="svg/scss.svg" alt="CSS">SCSS</div>
 						<div><img class="vector-icon" src="svg/wordpress.svg" alt="WordPress">WordPress</div>
+						<div><img class="vector-icon" src="svg/hubspot.svg" alt="Hubspot">Hubspot</div>
 						<div><img class="vector-icon" src="svg/materializecss.svg" alt="Materialize">Materialize CSS</div>
 						<div><img class="vector-icon" src="svg/adobe-xd.svg" alt="Adobe XD">Adobe XD</div>
 						<div><img class="vector-icon" src="svg/figma.svg" alt="Figma">Figma</div>
 						<div><img class="vector-icon" src="svg/adobe-illustrator.svg" alt="Adobe Illustrator">Adobe Illustrator</div>
 						<div><img class="vector-icon" src="svg/adobe-photoshop.svg" alt="Adobe Photoshop">Adobe Photoshop</div>
-						<div><img class="vector-icon" src="svg/bootstrap.svg" alt="Bootstrap">Bootstrap</div>
+						<div><img class="vector-icon" src="svg/vuetify.svg" alt="Vuetify">Vuetify</div>
+						<div><img class="vector-icon" src="svg/storybook.svg" alt="Storybook">Storybook</div>
+						<div><img class="vector-icon" src="svg/typescript.svg" alt="Typescript">Typescript</div>
 						<div><img class="vector-icon" src="svg/javascript.svg" alt="JavaScript">JavaScript</div>
 						<div><img class="vector-icon" src="svg/jquery.svg" alt="jQuery">jQuery</div>
 						<div><img class="vector-icon" src="svg/github.svg" alt="GitHub">GitHub</div>
-						<div><img class="vector-icon" src="svg/php.svg" alt="PHP">PHP</div>
-						<div><img class="vector-icon" src="svg/google-analytics.svg" alt="Google Analystics">Google Analystics</div>
 						<div><img class="vector-icon" src="svg/visual-studio-code.svg" alt="Visual Studio">Visual Studio</div>
 						<div><img class="vector-icon" src="svg/responsive.svg" alt="Responsive Website">Responsive Website</div>
 						<div><img class="vector-icon" src="svg/google.svg" alt="Responsive Website">Google Workspace Tools</div>
@@ -201,9 +190,9 @@
 								</tr>
 								<tr>
 									<td>
-										<div>Leadership</div>
+										<div>Mood maker</div>
 									</td>
-									<td>Lead and mentor team members with a passion to grow together as a team.</td>
+									<td>Has the ability to positively influence and uplift the mood of others. </td>
 								</tr>
 							</table>
 						</div>
@@ -214,49 +203,48 @@
 				<div class="wrapper reveal">
 					<h1>Experience</h1>
 					<div class="experience-wrap">
-						<div class="experience-balloon reveal">
+						<div class="experience-balloon-first reveal">
+							<div class="status">Current Position</div>
 							<div class="experience-header">
-								<div class="job-title">Data Analyst/ Designer</div>
-								<div class="company-name">Itamiarts Inc (Myanmar Branch)</div>
-								<div class="los">11/2017 ～ 06/2018</div>
+								<div class="job-title">Design Engineer</div>
+								<div class="company-name">SENSYN ROBOTICS Inc.</div>
+								<div class="los">09/2022 ～ Current</div>
 							</div>
 							<div class="responsibility">
-								<ul>
-									<li>Creating Original Nobori (Japanese Flag) designs by using Adobe Illustrator and
-										Photoshop to meet customer demands.</li>
-									<li>Coordinate cross-cultural teams(Japan ⇌ Myanmar) efficiently to increase mutual
-										understanding of tasks for quality deliverables.</li>
-									<li>Analyze data from internal and external customers to help process requirements for
-										printing (CMYK color, Outline Fonts, Linked Image, etc.).</li>
-								</ul>
+								<ol>
+									<li>
+										In-house Design System
+										<ul>
+											<li>As a member of the team, developed a unique design philosophy based on in-house PD/PJ designs. </li>
+											<li>In the process, conducted research on other companies and evaluated the features of Vuetify to define the design.</li>
+											<li>Utilized the defined design as a base, implemented it in Storybook using the Vuetify library, and customized Typescript and SCSS.</li>
+											<li>Responded to requests such as bug fixes for implemented components and adding new features while maintaining continuous communication with designers and engineers.</li>
+										</ul>
+									</li>
+									<li>
+										Corporate Website Operations Development
+										<ul>
+											<li>Responsible for managing in-house official websites, recruitment sites, and product landing pages.</li>
+											<li>Carried out various tasks including creating new pages, updating/modifying existing pages, and regularly releasing news. </li>
+											<li>Utilized Figma to create markup designs for new pages and provided end-to-end support up to coding.</li>
+										</ul>
+									</li>
+									<li>
+										UI Design for Products
+										<ul>
+											<li>As a member of the design team for BtoB products, listened to requirements from planning members and created Figma UI screens for PD/PJ. </li>
+											<li>Reviewed the designs within the design team and explained design details to developers.</li>
+										</ul>
+									</li>
+								</ol>
 							</div>
 						</div>
 						<div class="experience-balloon reveal">
-							<div class="experience-header">
-								<div class="job-title">Web Coder</div>
-								<div class="company-name">Itamiarts Inc (Head Office)</div>
-								<div class="los">06/2018 ～ 02/2021</div>
-							</div>
-							<div class="responsibility">
-								<ul>
-									<li>Working as the web design team member of the web marketing department.</li>
-									<li>Coding and updating Company EC websites using HTML, CSS, Materialize CSS,
-										JavaScript, and jQuery languages.</li>
-									<li>Creating and Managing in-house media website and homepage by using WordPress.</li>
-									<li>Coding landing pages, and new product pages based on wire/structure plans created by
-										the designer.</li>
-									<li>Assisting web designer in creating products banner (eg. cutting out objects and
-										compositing the image by using Photoshop & 4DBox.)</li>
-									<li>Schedule and task management by mentoring and communicating with Myanmar coding team
-										members.</li>
-								</ul>
-							</div>
-						</div>
-						<div class="experience-balloon-last reveal">
+							<div class="status-previous">Previous Position</div>
 							<div class="experience-header">
 								<div class="job-title">Web Designer/Web markup Engineer</div>
 								<div class="company-name">NEXTERA Inc.</div>
-								<div class="los">03/2021 ～ Present</div>
+								<div class="los">03/2021 ～ 08/2022</div>
 							</div>
 							<div class="responsibility">
 								<ul>
@@ -281,13 +269,139 @@
 								</ul>
 							</div>
 						</div>
+						<div class="experience-balloon reveal">
+							<div class="status-previous">Previous Position</div>
+							<div class="experience-header">
+								<div class="job-title">Web Coder</div>
+								<div class="company-name">Itamiarts Inc (Head Office)</div>
+								<div class="los">06/2018 ～ 02/2021</div>
+							</div>
+							<div class="responsibility">
+								<ul>
+									<li>Working as the web design team member of the web marketing department.</li>
+									<li>Coding and updating Company EC websites using HTML, CSS, Materialize CSS,
+										JavaScript, and jQuery languages.</li>
+									<li>Creating and Managing in-house media website and homepage by using WordPress.</li>
+									<li>Coding landing pages, and new product pages based on wire/structure plans created by
+										the designer.</li>
+									<li>Assisting web designer in creating products banner (eg. cutting out objects and
+										compositing the image by using Photoshop & 4DBox.)</li>
+									<li>Schedule and task management by mentoring and communicating with Myanmar coding team
+										members.</li>
+								</ul>
+							</div>
+						</div>
+						<div class="experience-balloon reveal">
+							<div class="status-previous">Previous Position</div>
+							<div class="experience-header">
+								<div class="job-title">Data Analyst/ Designer</div>
+								<div class="company-name">Itamiarts Inc (Myanmar Branch)</div>
+								<div class="los">11/2017 ～ 06/2018</div>
+							</div>
+							<div class="responsibility">
+								<ul>
+									<li>Creating Original Nobori (Japanese Flag) designs by using Adobe Illustrator and
+										Photoshop to meet customer demands.</li>
+									<li>Coordinate cross-cultural teams(Japan ⇌ Myanmar) efficiently to increase mutual
+										understanding of tasks for quality deliverables.</li>
+									<li>Analyze data from internal and external customers to help process requirements for
+										printing (CMYK color, Outline Fonts, Linked Image, etc.).</li>
+								</ul>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
 			<section id="projects">
 				<div class="wrapper reveal">
 					<h1>Projects</h1>
-					<div class="works-items">
+					<div class="works-items current reveal">
+						<h2 class="header-h2-line"><span>Current projects</span></h2>
+						<div class="row">
+							<!--1-->
+							<div class="col">
+								<div class="deco-spot">
+									<span class="red"></span>
+									<span class="yellow"></span>
+									<span class="green"></span>
+								</div>
+								<div class="project-title">Design system (Figma components)</div>
+								<div class="tools">
+									<span>Figma</span>
+									<span>Material Design</span>
+									<span>Research</span>
+									<span>Other companies design system</span>
+								</div>
+								<p>
+									In order to achieve consistency in design, we implemented an in-house design system. The design team conducted research on other companies and defined the design based on our existing service UIs. This involved creating designs, conducting reviews, and converting them into Figma components.
+								</p>
+								<img src="img/design-system.png" alt="">
+							</div>
+							<!--2-->
+							<div class="col">
+								<div class="deco-spot">
+									<span class="red"></span>
+									<span class="yellow"></span>
+									<span class="green"></span>
+								</div>
+								<div class="project-title">Design system (Development)</div>
+								<div class="tools">
+									<span>HTML/CSS/SCSS</span>
+									<span>Vue</span>
+									<span>Vuetify</span>
+									<span>Typescript</span>
+									<span>Storybook</span>
+									<span>Jira</span>
+								</div>
+								<p>
+									Implemented it in Storybook using the Vuetify library, and customized Typescript and SCSS. <br>
+									Our Design System version-1 will officially release coming April 2024.
+								</p>
+								<img src="img/rosetta.png" alt="">
+							</div>
+							<!--3-->
+							<div class="col">
+								<div class="deco-spot">
+									<span class="red"></span>
+									<span class="yellow"></span>
+									<span class="green"></span>
+								</div>
+								<div class="project-title">Company Website (Recruit website/LP etc.)</div>
+								<div class="tools">
+									<span>Hubspot</span>
+									<span>HTML/CSS</span>
+									<span>JavaScript</span>
+									<span>Jquery</span>
+									<span>Responsive</span>
+								</div>
+								<p>
+									Handling the design and coding of product landing pages for corporate website renewal, updates, modifications, and other needs. Proficient in providing end-to-end support, from designing the LP page to coding, with implementation on HubSpot.
+								</p>
+								<img src="img/homepage.png" alt="">
+								<a href="https://www.sensyn-robotics.com/" target="_blank" class="to-page">View Website <i
+										class="fa-solid fa-circle-arrow-right"></i></a>
+							</div>
+							<!--4-->
+							<div class="col">
+								<div class="deco-spot">
+									<span class="red"></span>
+									<span class="yellow"></span>
+									<span class="green"></span>
+								</div>
+								<div class="project-title">PD/PJ</div>
+								<div class="tools">
+									<span>Figma</span>
+								</div>
+								<p>
+									Mainly use Figma design tool to create UI design of BtoB products and project.
+
+								</p>
+								<img src="img/pd-pj.png" alt="">
+							</div>
+						</div>
+					</div>
+					<div class="works-items reveal">
+						<h2 class="header-h2-line"><span>Previous projects</span></h2>
 						<div class="row">
 							<!--1-->
 							<div class="col">
@@ -309,7 +423,6 @@
 									Updating information on the products page, adding options, and editing the order form of the eccomerce sites.
 								</p>
 								<img src="img/ec-site.png" alt="">
-								<a href="https://www.i-nobori.com/" target="_blank" class="to-page">View Website <i class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--2-->
 							<div class="col">
@@ -331,35 +444,8 @@
 									Update and edit information, manage versions of plugins and WordPress.
 								</p>
 								<img src="img/itamiarts-official.png" alt="">
-								<a href="https://www.itamiarts.co.jp/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--3-->
-							<div class="col">
-								<div class="deco-spot">
-									<span class="red"></span>
-									<span class="yellow"></span>
-									<span class="green"></span>
-								</div>
-								<div class="project-title">Company Recruit Website</div>
-								<div class="tools">
-									<span>WordPress</span>
-									<span>Elementor</span>
-									<span>HTML/CSS</span>
-									<span>PHP</span>
-									<span>JavaScript</span>
-									<span>Responsive</span>
-								</div>
-								<p>
-									Update and edit recruit information.<br>
-									Create and update new content for the members' interview section.<br>
-									Manage versions of plugins and WordPress.
-								</p>
-								<img src="img/itamiarts-recruit.png" alt="">
-								<a href="https://itamiarts-recruit.com/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
-							</div>
-							<!--4-->
 							<div class="col">
 								<div class="deco-spot">
 									<span class="red"></span>
@@ -382,7 +468,7 @@
 								<!-- <a href="https://www.shibuya-archery.com/" target="_blank" class="to-page">View Website <i
 										class="fa-solid fa-circle-arrow-right"></i></a> -->
 							</div>
-							<!--5-->
+							<!--4-->
 							<div class="col">
 								<div class="deco-spot">
 									<span class="red"></span>
@@ -401,10 +487,8 @@
 									A user manual is also created for customers to update and upload news articles by themselves. The release was earlier than scheduled and got recognition from the customer.
 								</p>
 								<img src="img/socialcooperation.jissen.png" alt="">
-								<a href="https://socialcooperation.jissen.ac.jp/" target="_blank" class="to-page">View
-									Website <i class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
-							<!--6-->
+							<!--5-->
 							<div class="col">
 								<div class="deco-spot">
 									<span class="red"></span>
@@ -425,12 +509,9 @@
 									Effectively communicating with customers to deliver the final product with 100% satisfaction.
 								</p>
 								<img src="img/keiei-kanto-gakuin.png" alt="">
-								<a href="http://keiei.kanto-gakuin.ac.jp/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
-	
 				</div>
 			</section>
 		</div>
