--- a/jp.html
+++ b/jp.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="portfolio, portfolio design, portfolio website, personal portfolio" />
 	<meta name="description" content="Welcome to Mya Thet Chel's Portfolio Website. Web Designer and Markup Engineer" />
 	<title>ポートフォリオ - ミャテッチェ</title>
-	<link rel="icon" type="image/x-icon" href="img/favicon.png">
+	<link rel="icon" type="image/x-icon" href="img/mya-favicon.png">
 	<link rel="stylesheet" href="css/stye.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
 		integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
@@ -70,9 +70,6 @@
 		<div id="navbar">
 			<nav class="navigation">
 				<ul>
-					<li class="nav-logo-wrap">
-						<a href="#"><img src="img/favicon.png" alt="" class="nav-logo"></a>
-					</li>
 					<li class="nav-side-menu">
 						<a href="#about"><span>自己紹介</span></a>
 						<a href="#skills">スキル・言語</a>
@@ -94,7 +91,6 @@
 				<div id="g-nav-list">
 					<!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
 					<ul>
-						<li><a href="#"><img src="img/favicon.png" alt=""></a></li>
 						<li><a href="#about">自己紹介</a></li>
 						<li><a href="#skills">スキル・言語</a></li>
 						<li><a href="#experience">職務経歴</a></li>
@@ -117,9 +113,6 @@
 					<h1><span>自己紹介</span></h1>
 					<div class="about-row">
 						<div>
-							<img src="img/my-profile.png" alt="">
-						</div>
-						<div>
 							<script src="https://unpkg.com/ityped@0.0.10"></script>
 							<h3>こんにちは！<br><span class="ityped"></span></h3>
 							<script>
@@ -129,12 +122,9 @@
 								})
 							</script>
 							<p>
-								ヤンゴン外国語大学を日本語専門で卒業後、オリジナルのぼり旗販売・広告企業のミャンマー支社にデータ処理やデザイン制作者として入社しました。
-								その後日本にある本社に移転となり、マーケティング部WEBデザイン班のコーディングチームにコーダーとして３年間働きました。
-								現在は東京の広告・ブランディング企業にウエブデザイナー、マークアップエンジニアとして活動しております。<br>
-								Web業界での実務経験5年以上で、HTML/CSS、Materialize
-								CSS、JavaScript、jQuery、PHP利用のレスポンシブサイト作成、WordPress利用の大学のホームページ作成、 Illustrator,
-								Photoshop、Adobe XD 、Figmaのデザインツール利用してラフデザイン作成に経験があります。
+								デジタル領域で5年以上の経験を持つUIデザインおよび開発の専門家として、情熱を持って取り組んでいます。<br>
+								HTML、CSS、Vue、Vuetify、Storybook、Typescriptなどの幅広いツールキットを備えており、FigmaやAdobe XDなどのデザインツールを使いこなしています。
+								常に革新を追求し、各プロジェクトに対して情熱と向上心を持って取り組んでいます。
 							</p>
 							<ul>
 								<li>生年月日：1996年5月12日（26歳）</li>
@@ -143,6 +133,9 @@
 								<li>住所: 江東区、東京都</li>
 								<li>メールアドレス: <a href="mailto:myathetchel00@gmail.com">myathetchel00@gmail.com</a></li>
 							</ul>
+						</div>
+						<div>
+							<img src="img/profile.png" alt="">
 						</div>
 					</div>
 	
@@ -155,22 +148,22 @@
 					<div class="skill-wrap">
 						<div><img class="vector-icon" src="svg/html.svg" alt="HTML5">HTML</div>
 						<div><img class="vector-icon" src="svg/css3.svg" alt="CSS">CSS</div>
+						<div><img class="vector-icon" src="svg/scss.svg" alt="CSS">SCSS</div>
 						<div><img class="vector-icon" src="svg/wordpress.svg" alt="WordPress">WordPress</div>
 						<div><img class="vector-icon" src="svg/materializecss.svg" alt="Materialize">Materialize CSS</div>
 						<div><img class="vector-icon" src="svg/adobe-xd.svg" alt="Adobe XD">Adobe XD</div>
 						<div><img class="vector-icon" src="svg/figma.svg" alt="Figma">Figma</div>
 						<div><img class="vector-icon" src="svg/adobe-illustrator.svg" alt="Adobe Illustrator">Adobe Illustrator</div>
 						<div><img class="vector-icon" src="svg/adobe-photoshop.svg" alt="Adobe Photoshop">Adobe Photoshop</div>
-						<div><img class="vector-icon" src="svg/bootstrap.svg" alt="Bootstrap">Bootstrap</div>
+						<div><img class="vector-icon" src="svg/vuetify.svg" alt="JavaScript">Vuetify</div>
+						<div><img class="vector-icon" src="svg/storybook.svg" alt="JavaScript">Storybook</div>
+						<div><img class="vector-icon" src="svg/typescript.svg" alt="JavaScript">Typescript</div>
 						<div><img class="vector-icon" src="svg/javascript.svg" alt="JavaScript">JavaScript</div>
 						<div><img class="vector-icon" src="svg/jquery.svg" alt="jQuery">jQuery</div>
 						<div><img class="vector-icon" src="svg/github.svg" alt="GitHub">GitHub</div>
-						<div><img class="vector-icon" src="svg/php.svg" alt="PHP">PHP</div>
-						<div><img class="vector-icon" src="svg/google-analytics.svg" alt="Google Analystics">Google Analystics</div>
 						<div><img class="vector-icon" src="svg/visual-studio-code.svg" alt="Visual Studio">Visual Studio</div>
 						<div><img class="vector-icon" src="svg/responsive.svg" alt="Responsive Website">Responsive Website</div>
 						<div><img class="vector-icon" src="svg/google.svg" alt="Responsive Website">Google Workspace Tools</div>
-
 							
 						<h2 class="mt-3">言語</h2>
 						<div><img class="vector-icon" src="svg/myanmar.svg" alt="Myanmar">ミャンマー語 (母語)</div>
@@ -181,14 +174,13 @@
 					<h2 class="mt-3">自己PR</h2>
 					<div class="skill-wrap soft">
 						<p>
-							私の強みは、自己成長に必要な知識を積極的に身につける「吸収力」です。<br>
-							これは、大学を卒業後、デザインやコーディングの知識がなかった私は、ウエブデザイン班のコーディングチームメンバーとして活力できるようになったことで発揮されました。
-							当初はIllustrator や Photoshopなどのデザインツールの知識もコーディングのやり方も全く分からず、困りましたが、自分でチャレンジしながらミスから学び、挑戦精神を持ちつつ、勉強に熱心に取り込みました。<br>
-							その結果、2年目から自分ができる範囲が広げてきて、後輩たちへのコーディング指導やタスクの管理まで担当することになりました。<br>
-							最初は不安や心配な気持ちがありましたが、責任感を持ちつつ、メンバーと相談しやすい関係を作り、人から信頼される行動を大事にして、より良いチームワークに協力しました。<br>
-							今は、企業や大学などのホームページデザイン作成・フロントエンジニアとして活躍しております。<br>
-							自分の考えとお客様のニーズを加えたデザイン作りやお客様の満足度を高めたサイト構築に自信があります。<br>
-							私は自分なりにやりがいや喜びを感じながら成長していける職場環境が好きで、その環境造りに自分が持ってる知識や力を全力で生かしていきたいと思います。
+							私の強みは、自己成長に必要な知識を積極的に吸収する能力です。<br>
+							これは、大学を卒業後、デザインやコーディングの知識がなかった私は、ウエブデザイン班のコーディングチームメンバーとして活力できるようになったことで発揮されました。最初はIllustratorやPhotoshop、Figmaなどのデザインツールの使い方やコーディングの技術について全くの素人でしたが、自らチャレンジし、失敗から学び、勉強に励む姿勢を貫きました。<br>
+							その結果、2年目には自らのスキルを向上させ、後輩たちにコーディングの指導やタスクの管理を担当するまでに成長しました。<br>
+							元々デザイン分野にも興味があり、Webデザイン業界に挑戦し、さらに自身の知識を広げ、UI/UXデザインにも取り組みました。<br><br>
+							私の目標は、デザインとコーディングの両方に精通したプロフェッショナルになることです。<br>
+							この両方の知識を活かして、よりホリスティックなアプローチを提供し、プロジェクトの成功に貢献したいと思っています。<br>
+							私は自分なりにやりがいや喜びを感じながら成長できる職場環境を求めています。<br>チームメンバーと協力して、お互いの強みを活かし合い、より良い職場環境を築きたいです。
 						</p>					
 					</div>
 
@@ -199,7 +191,83 @@
 				<div class="wrapper reveal">
 					<h1>職務経歴</h1>
 					<div class="experience-wrap">
+						<div class="experience-balloon-first reveal">
+							<div class="status">現在の所属</div>
+							<div class="experience-header">
+								<div class="job-title">デザインエンジニア</div>
+								<div class="company-name">株式会社センシンロボティクス</div>
+								<div class="los">2022年9月 ～ 現在</div>
+							</div>
+							<div class="responsibility">
+								<ol>
+									<li>
+										自社デザインシステム
+										<ul>
+											<li>チームの一員として、自社PD/PJのデザインを基にした独自のデザイン思想を開発。</li>
+											<li>プロセスでは、他社の調査やVuetifyの機能検討を行い、デザインを定義。</li>
+											<li>定義したデザインをベースに、Vuetifyライブラリを使用し、TypescriptやSCSSをカスタマイズしてStorybookに実装。</li>
+											<li>デザイナーやエンジニアと継続的にコミュニケーションを取りながら、実装済みコンポーネントのバグ修正や新しい機能の追加などの要望に対応。</li>
+										</ul>
+									</li>
+									<li>
+										社内のコーポレートサイト運用構築
+										<ul>
+											<li>自社の公式サイト、採用サイト、およびプロダクトのLPページなどの管理を担当。</li>
+											<li>新規ページの作成や既存ページの更新・修正・ニュースの定期リリースなど、幅広い業務を行う。</li>
+											<li>新しいページの作成には、Figmaを使用してマークアップデザインを作成し、コーディングまで一貫して対応。</li>
+										</ul>
+									</li>
+									<li>
+										プロダクトのUIデザイン作成
+										<ul>
+											<li>企画メンバーからの要件をヒアリングし、BtoBプロダクト・プロジェクトのFigma UI画面を作成</li>
+											<li>作成したデザインは、デザインチームでレビューを行い、開発者にデザインの詳細を説明</li>
+										</ul>
+									</li>
+								</ol>
+							</div>
+						</div>
 						<div class="experience-balloon reveal">
+							<div class="status-previous">過去の所属</div>
+							<div class="experience-header">
+								<div class="job-title">ウエブデザイナー/マークアップエンジニア</div>
+								<div class="company-name">株式会社ネクステラ</div>
+								<div class="los">2021年3月 ～ 2022年8月</div>
+							</div>
+							<div class="responsibility">
+								<ul>
+									<li>HTML、CSS、JavaScriptを利用したレスポンシブサイト作成。</li>
+									<li>Adobe Illustrator、Photoshop、AdobeXD やFigmaなどのデザインツールを利用したウエブサイトデザインワイヤー作成.</li>
+									<li>クライアントサイトの更新、修正やサイト管理。</li>
+									<li>WordPress使用のサイト構築。</li>
+									<li>Microsoft powerpointやグーグルワックスペースアプリを利用してクライアント側からサイトの更新ができるように
+										サイトの仕様マニュアル作成。</li>
+									<li>お客様の希望に従って、デザインアイデア出しから開発、サイトリリースまでのスケジュール作成。</li>
+									<li>担当したクライアントサイトのグーグルアナリティクスレポート作成、提出。</li>
+								</ul>
+							</div>
+						</div>
+						<div class="experience-balloon reveal">
+							<div class="status-previous">過去の所属</div>
+							<div class="experience-header">
+								<div class="job-title">ウエブコーダー</div>
+								<div class="company-name">株式会社イタミアート (本社)</div>
+								<div class="los">2018年6月 ～ 2021年2月</div>
+							</div>
+							<div class="responsibility">
+								<ul>
+									<li>のぼり旗や横断幕、タペストリー等印刷系の販促グッズを紹介する広告用ランディングページや新商品のクッションページのレスポンシブ対応を制作。
+										基本はウエブデザイナーからもらったラフを参考に作成。
+									</li>
+									<li>WordPress使用の自社公式サイトや採用サイト、オウンドメディアサイトの作成。WordPressテーマのカスタマイズやプラグインの使用で、サイト修正やページ追加をの対応。
+									</li>
+									<li>商品ページ用バナー作成にデザインのヘルプ。（画像の切り抜き、写真合成等）</li>
+									<li>ミャンマーチームのタスク管理、コーディング指導、ミャンマー支社と本社とのやり取り担当。</li>
+								</ul>
+							</div>
+						</div>
+						<div class="experience-balloon reveal">
+							<div class="status-previous">過去の所属</div>
 							<div class="experience-header">
 								<div class="job-title">データ処理/ デザイン制作</div>
 								<div class="company-name">株式会社イタミアート (ミャンマー支店)</div>
@@ -218,50 +286,97 @@
 								</ul>
 							</div>
 						</div>
-						<div class="experience-balloon reveal">
-							<div class="experience-header">
-								<div class="job-title">ウエブコーダー</div>
-								<div class="company-name">株式会社イタミアート (本社)</div>
-								<div class="los">2018年6月 ～ 2021年2月</div>
-							</div>
-							<div class="responsibility">
-								<ul>
-									<li>のぼり旗や横断幕、タペストリー等印刷系の販促グッズを紹介する広告用ランディングページや新商品のクッションページのレスポンシブ対応を制作。
-										基本はウエブデザイナーからもらったラフを参考に作成。
-									</li>
-									<li>WordPress使用の自社公式サイトや採用サイト、オウンドメディアサイトの作成。WordPressテーマのカスタマイズやプラグインの使用で、サイト修正やページ追加をの対応。
-									</li>
-									<li>商品ページ用バナー作成にデザインのヘルプ。（画像の切り抜き、写真合成等）</li>
-									<li>ミャンマーチームのタスク管理、コーディング指導、ミャンマー支社と本社とのやり取り担当。</li>
-								</ul>
-							</div>
-						</div>
-						<div class="experience-balloon-last reveal">
-							<div class="experience-header">
-								<div class="job-title">ウエブデザイナー/マークアップエンジニア</div>
-								<div class="company-name">株式会社ネクステラ</div>
-								<div class="los">2021年3月 ～ 現在</div>
-							</div>
-							<div class="responsibility">
-								<ul>
-									<li>HTML、CSS、JavaScriptを利用したレスポンシブサイト作成。</li>
-									<li>Adobe Illustrator、Photoshop、AdobeXD やFigmaなどのデザインツールを利用したウエブサイトデザインワイヤー作成.</li>
-									<li>クライアントサイトの更新、修正やサイト管理。</li>
-									<li>WordPress使用のサイト構築。</li>
-									<li>Microsoft powerpointやグーグルワックスペースアプリを利用してクライアント側からサイトの更新ができるように
-										サイトの仕様マニュアル作成。</li>
-									<li>お客様の希望に従って、デザインアイデア出しから開発、サイトリリースまでのスケジュール作成。</li>
-									<li>担当したクライアントサイトのグーグルアナリティクスレポート作成、提出。</li>
-								</ul>
-							</div>
-						</div>
 					</div>
 				</div>
 			</section>
 			<section id="projects">
 				<div class="wrapper reveal">
 					<h1>プロジェクト</h1>
+					<div class="works-items current reveal">
+						<h2 class="header-h2-line"><span>現在のプロジェクト</span></h2>
+						<div class="row">
+							<!--1-->
+							<div class="col">
+								<div class="deco-spot">
+									<span class="red"></span>
+									<span class="yellow"></span>
+									<span class="green"></span>
+								</div>
+								<div class="project-title">デザインシステム (デザイン定義など)</div>
+								<div class="tools">
+									<span>Figma</span>
+									<span>Material Design</span>
+									<span>Research</span>
+									<span>Other companies design system</span>
+								</div>
+								<p>
+									デザインの一貫性を確保するために、自社では独自のデザインシステムを実装中。<br>デザインチームとして他社の調査や当社の既存サービスのUIをベースにして、デザインの定義、作成、レビュー、そしてFigmaでのコンポーネント化を行う。
+								</p>
+								<img src="img/design-system.png" alt="">
+							</div>
+							<!--2-->
+							<div class="col">
+								<div class="deco-spot">
+									<span class="red"></span>
+									<span class="yellow"></span>
+									<span class="green"></span>
+								</div>
+								<div class="project-title">デザインシステム (実装)</div>
+								<div class="tools">
+									<span>HTML/CSS/SCSS</span>
+									<span>Vue</span>
+									<span>Vuetify</span>
+									<span>Typescript</span>
+									<span>Storybook</span>
+									<span>Jira</span>
+								</div>
+								<p>
+									Vuetifyライブラリを使用し、Storybookで実装。TypescriptとSCSSをカスタマイズ対応。<br>
+									自社のデザインシステムのバージョン1は、2024年4月に正式にリリース予定。
+								</p>
+								<img src="img/rosetta.png" alt="">
+							</div>
+							<!--3-->
+							<div class="col">
+								<div class="deco-spot">
+									<span class="red"></span>
+									<span class="yellow"></span>
+									<span class="green"></span>
+								</div>
+								<div class="project-title">コーポレートサイト関連 (採用サイト/LPなど含む)</div>
+								<div class="tools">
+									<span>Hubspot</span>
+									<span>HTML/CSS</span>
+									<span>JavaScript</span>
+									<span>Jquery</span>
+									<span>Responsive</span>
+								</div>
+								<p>
+									ウェブサイトのリニューアル、更新、修正、およびその他のニーズに関するプロダクトランディングページのデザインとコーディングを担当。<br>
+									LPページの設計からコーディングまでのエンドツーエンドのサポートを提供し、HubSpotでの実装を得意としている。
+								</p>
+								<img src="img/homepage.png" alt="">
+							</div>
+							<!--4-->
+							<div class="col">
+								<div class="deco-spot">
+									<span class="red"></span>
+									<span class="yellow"></span>
+									<span class="green"></span>
+								</div>
+								<div class="project-title">PD/PJ</div>
+								<div class="tools">
+									<span>Figma</span>
+								</div>
+								<p>
+									企画メンバーからの要件をヒアリングし、BtoBプロダクト・プロジェクトのFigma UI画面を作成。
+								</p>
+								<img src="img/pd-pj.png" alt="">
+							</div>
+						</div>
+					</div>
 					<div class="works-items">
+						<h2 class="header-h2-line"><span>過去のプロジェクト</span></h2>
 						<div class="row">
 							<!--1-->
 							<div class="col">
@@ -306,8 +421,6 @@
 									WordPress使用の自社公式サイトの更新、修正、コンテンツ追加などの対応。
 								</p>
 								<img src="img/itamiarts-official.png" alt="">
-								<a href="https://www.itamiarts.co.jp/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--3-->
 							<div class="col">
@@ -330,8 +443,6 @@
 									WordPressテーマのカスタマイズやプラグインの使用で、サイト修正やページ追加の対応。
 								</p>
 								<img src="img/itamiarts-recruit.png" alt="">
-								<a href="https://itamiarts-recruit.com/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--4-->
 							<div class="col">
@@ -353,8 +464,6 @@
 									デザインのアイデア出しからラフ作成、コーディング、リリースまでのスケジュール作成、ユーザーマニュアル作成を対応。
 								</p>
 								<img src="img/shibuya-archery-web.png" alt="">
-								<!-- <a href="https://www.shibuya-archery.com/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a> -->
 							</div>
 							<!--5-->
 							<div class="col">
@@ -375,8 +484,6 @@
 									新サイト作成で、サイバー内のWordPressインストールからサイト構築、公開までの作業、マニュアル作成全部対応。
 								</p>
 								<img src="img/socialcooperation.jissen.png" alt="">
-								<a href="https://socialcooperation.jissen.ac.jp/" target="_blank" class="to-page">View
-									Website <i class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--6-->
 							<div class="col">
@@ -398,8 +505,6 @@
 									デザインナーからもらったラフデザインを基にして、サイト作成。
 								</p>
 								<img src="img/keiei-kanto-gakuin.png" alt="">
-								<a href="http://keiei.kanto-gakuin.ac.jp/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 						</div>
 					</div>
