--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 								})
 							</script>
 							<p>
-								I am a passionate Design Engineer specializing in UI design and development, with over 5 years of experience in the digital realm. Equipped with a comprehensive toolkit including HTML, CSS, and a range of UI libraries such as Vue, Vuetify, Storybook and Typescript, as well as proficiency in Figma and Adobe XD, I approach each project with boundless enthusiasm and a relentless drive for innovation.
+								I am a passionate Design Engineer specializing in UI design and development, with over 5 years of experience in the digital realm. Equipped with a comprehensive toolkit including HTML, CSS, and a range of UI libraries such as Vue, Vuetify, Storybook, as well as proficiency in Figma and Adobe XD, I approach each project with boundless enthusiasm and a relentless drive for innovation.
 							</p>
 							<ul>
 								<li>Date of Birth: 12 May 1996</li>
