--- a/jp.html
+++ b/jp.html
@@ -123,7 +123,7 @@
 							</script>
 							<p>
 								デジタル領域で5年以上の経験を持つUIデザインおよび開発の専門家として、情熱を持って取り組んでいます。<br>
-								HTML、CSS、Vue、Vuetify、Storybook、Typescriptなどの幅広いツールキットを備えており、FigmaやAdobe XDなどのデザインツールを使いこなしています。
+								HTML、CSS、Vue、Vuetify、Storybook、Workpress、Hubspotなどの幅広いツールキットを備えており、FigmaやAdobe XDなどのデザインツールを使いこなしています。
 								常に革新を追求し、各プロジェクトに対して情熱と向上心を持って取り組んでいます。
 							</p>
 							<ul>
