--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 				<div class="wrapper reveal">
 					<h1>Projects</h1>
 					<div class="works-items current reveal">
-						<h2 class="header-h2-line"><span>Most recent projects</span></h2>
+						<h2 class="header-h2-line"><span>Recent projects</span></h2>
 						<div class="row">
 							<!--1-->
 							<div class="col">
