--- a/index.html
+++ b/index.html
@@ -92,12 +92,9 @@
 								I am a passionate Design Engineer specializing in UI design and development, with over 5 years of experience in the digital realm. Equipped with a comprehensive toolkit including HTML, CSS, and a range of UI libraries such as Vue, Vuetify, Storybook, as well as proficiency in Figma and Adobe XD, I approach each project with boundless enthusiasm and a relentless drive for innovation.
 							</p>
 							<ul>
-								<li>Date of Birth: 12 May 1996</li>
 								<li>Education: Bachelor of Arts (Yangon University of Foreign Languages - Japanese major)
 								</li>
-								<li>Nationality: Myanmar</li>
-								<li>Address: Koto-ku, Tokyo, Japan</li>
-								<li>Email: <a href="mailto:myathetchel00@gmail.com">myathetchel00@gmail.com</a></li>
+								<li>Contact me: <a href="mailto:myathetchel00@gmail.com">myathetchel00@gmail.com</a></li>
 							</ul>
 						</div>
 						<div>
@@ -116,7 +113,7 @@
 						<div><img class="vector-icon" src="svg/css3.svg" alt="CSS">CSS</div>
 						<div><img class="vector-icon" src="svg/scss.svg" alt="CSS">SCSS</div>
 						<div><img class="vector-icon" src="svg/wordpress.svg" alt="WordPress">WordPress</div>
-						<div><img class="vector-icon" src="svg/hubspot.svg" alt="Hubspot">Hubspot</div>
+						<div><img class="vector-icon" src="svg/hubspot.svg" alt="Hubspot" style="height: 28px; width: 50px;">Hubspot</div>
 						<div><img class="vector-icon" src="svg/materializecss.svg" alt="Materialize">Materialize CSS</div>
 						<div><img class="vector-icon" src="svg/adobe-xd.svg" alt="Adobe XD">Adobe XD</div>
 						<div><img class="vector-icon" src="svg/figma.svg" alt="Figma">Figma</div>
@@ -204,11 +201,11 @@
 					<h1>Experience</h1>
 					<div class="experience-wrap">
 						<div class="experience-balloon-first reveal">
-							<div class="status">Current Position</div>
+							<!-- <div class="status">Current Position</div> -->
 							<div class="experience-header">
 								<div class="job-title">Design Engineer</div>
 								<div class="company-name">SENSYN ROBOTICS Inc.</div>
-								<div class="los">09/2022 ～ Current</div>
+								<div class="los">09/2022 ～ 11/2025</div>
 							</div>
 							<div class="responsibility">
 								<ol>
@@ -240,7 +237,7 @@
 							</div>
 						</div>
 						<div class="experience-balloon reveal">
-							<div class="status-previous">Previous Position</div>
+							<!-- <div class="status-previous">Previous Position</div> -->
 							<div class="experience-header">
 								<div class="job-title">Web Designer/Web markup Engineer</div>
 								<div class="company-name">NEXTERA Inc.</div>
@@ -270,7 +267,7 @@
 							</div>
 						</div>
 						<div class="experience-balloon reveal">
-							<div class="status-previous">Previous Position</div>
+							<!-- <div class="status-previous">Previous Position</div> -->
 							<div class="experience-header">
 								<div class="job-title">Web Coder</div>
 								<div class="company-name">Itamiarts Inc (Head Office)</div>
@@ -292,7 +289,7 @@
 							</div>
 						</div>
 						<div class="experience-balloon reveal">
-							<div class="status-previous">Previous Position</div>
+							<!-- <div class="status-previous">Previous Position</div> -->
 							<div class="experience-header">
 								<div class="job-title">Data Analyst/ Designer</div>
 								<div class="company-name">Itamiarts Inc (Myanmar Branch)</div>
@@ -330,7 +327,6 @@
 									<span>Figma</span>
 									<span>Material Design</span>
 									<span>Research</span>
-									<span>Other companies design system</span>
 								</div>
 								<p>
 									In order to achieve consistency in design, we implemented an in-house design system. The design team conducted research on other companies and defined the design based on our existing service UIs. This involved creating designs, conducting reviews, and converting them into Figma components.
@@ -366,7 +362,7 @@
 									<span class="yellow"></span>
 									<span class="green"></span>
 								</div>
-								<div class="project-title">Company Website (Recruit website/LP etc.)</div>
+								<div class="project-title">In-House Website Projects</div>
 								<div class="tools">
 									<span>Hubspot</span>
 									<span>HTML/CSS</span>
@@ -375,11 +371,24 @@
 									<span>Responsive</span>
 								</div>
 								<p>
-									Handling the design and coding of product landing pages for corporate website renewal, updates, modifications, and other needs. Proficient in providing end-to-end support, from designing the LP page to coding, with implementation on HubSpot.
+									Designed and coded product landing pages for corporate website renewal projects, managing updates and new page creation. Delivered end-to-end implementation from design through HubSpot deployment.
 								</p>
+								<p class="web-list-title">Website References</p>
+								<ul class="web-list">
+									<li>
+										<a href="https://academy.sensyn-robotics.com/" target="_blank" class="web-link">academy.sensyn-robotics</a>
+									</li>
+									<li>
+										<a href="https://www.sensyn-robotics.com/service/rakurakudrone/" target="_blank" class="web-link">rakurakudrone</a>
+									</li>
+									<li>
+										<a href="https://gembaconnect.sensyn-robotics.com/" target="_blank" class="web-link">gembaconnect</a>
+									</li>
+									<li>
+										<a href="https://shoruira.sensyn-robotics.com/preregistration/" target="_blank" class="web-link">shoruira</a>
+									</li>
+								</ul>
 								<img src="img/homepage.png" alt="">
-								<a href="https://www.sensyn-robotics.com/" target="_blank" class="to-page">View Website <i
-										class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--4-->
 							<div class="col">
@@ -393,8 +402,7 @@
 									<span>Figma</span>
 								</div>
 								<p>
-									Mainly use Figma design tool to create UI design of BtoB products and project.
-
+									Handled UI design for B2B products and internal projects, using Figma to develop wireframes, visual designs, and reusable components while collaborating with stakeholders.
 								</p>
 								<img src="img/pd-pj.png" alt="">
 							</div>
