--- a/jp.html
+++ b/jp.html
@@ -127,10 +127,7 @@
 								常に革新を追求し、各プロジェクトに対して情熱と向上心を持って取り組んでいます。
 							</p>
 							<ul>
-								<li>生年月日：1996年5月12日（26歳）</li>
 								<li>大学: ヤンゴン外国語大学日本語専門卒業</li>
-								<li>国籍: ミャンマー</li>
-								<li>住所: 江東区、東京都</li>
 								<li>メールアドレス: <a href="mailto:myathetchel00@gmail.com">myathetchel00@gmail.com</a></li>
 							</ul>
 						</div>
@@ -150,14 +147,15 @@
 						<div><img class="vector-icon" src="svg/css3.svg" alt="CSS">CSS</div>
 						<div><img class="vector-icon" src="svg/scss.svg" alt="CSS">SCSS</div>
 						<div><img class="vector-icon" src="svg/wordpress.svg" alt="WordPress">WordPress</div>
+						<div><img class="vector-icon" src="svg/hubspot.svg" alt="Hubspot" style="height: 28px; width: 50px;">Hubspot</div>
 						<div><img class="vector-icon" src="svg/materializecss.svg" alt="Materialize">Materialize CSS</div>
 						<div><img class="vector-icon" src="svg/adobe-xd.svg" alt="Adobe XD">Adobe XD</div>
 						<div><img class="vector-icon" src="svg/figma.svg" alt="Figma">Figma</div>
 						<div><img class="vector-icon" src="svg/adobe-illustrator.svg" alt="Adobe Illustrator">Adobe Illustrator</div>
 						<div><img class="vector-icon" src="svg/adobe-photoshop.svg" alt="Adobe Photoshop">Adobe Photoshop</div>
-						<div><img class="vector-icon" src="svg/vuetify.svg" alt="JavaScript">Vuetify</div>
-						<div><img class="vector-icon" src="svg/storybook.svg" alt="JavaScript">Storybook</div>
-						<div><img class="vector-icon" src="svg/typescript.svg" alt="JavaScript">Typescript</div>
+						<div><img class="vector-icon" src="svg/vuetify.svg" alt="Vuetify">Vuetify</div>
+						<div><img class="vector-icon" src="svg/storybook.svg" alt="Storybook">Storybook</div>
+						<div><img class="vector-icon" src="svg/typescript.svg" alt="Typescript">Typescript</div>
 						<div><img class="vector-icon" src="svg/javascript.svg" alt="JavaScript">JavaScript</div>
 						<div><img class="vector-icon" src="svg/jquery.svg" alt="jQuery">jQuery</div>
 						<div><img class="vector-icon" src="svg/github.svg" alt="GitHub">GitHub</div>
@@ -192,11 +190,11 @@
 					<h1>職務経歴</h1>
 					<div class="experience-wrap">
 						<div class="experience-balloon-first reveal">
-							<div class="status">現在の所属</div>
+							<!-- <div class="status">現在の所属</div> -->
 							<div class="experience-header">
 								<div class="job-title">デザインエンジニア</div>
 								<div class="company-name">株式会社センシンロボティクス</div>
-								<div class="los">2022年9月 ～ 現在</div>
+								<div class="los">2022年9月 ～ 2025年11月</div>
 							</div>
 							<div class="responsibility">
 								<ol>
@@ -228,7 +226,7 @@
 							</div>
 						</div>
 						<div class="experience-balloon reveal">
-							<div class="status-previous">過去の所属</div>
+							<!-- <div class="status-previous">過去の所属</div> -->
 							<div class="experience-header">
 								<div class="job-title">ウエブデザイナー/マークアップエンジニア</div>
 								<div class="company-name">株式会社ネクステラ</div>
@@ -248,7 +246,7 @@
 							</div>
 						</div>
 						<div class="experience-balloon reveal">
-							<div class="status-previous">過去の所属</div>
+							<!-- <div class="status-previous">過去の所属</div> -->
 							<div class="experience-header">
 								<div class="job-title">ウエブコーダー</div>
 								<div class="company-name">株式会社イタミアート (本社)</div>
@@ -267,7 +265,7 @@
 							</div>
 						</div>
 						<div class="experience-balloon reveal">
-							<div class="status-previous">過去の所属</div>
+							<!-- <div class="status-previous">過去の所属</div> -->
 							<div class="experience-header">
 								<div class="job-title">データ処理/ デザイン制作</div>
 								<div class="company-name">株式会社イタミアート (ミャンマー支店)</div>
@@ -307,7 +305,6 @@
 									<span>Figma</span>
 									<span>Material Design</span>
 									<span>Research</span>
-									<span>Other companies design system</span>
 								</div>
 								<p>
 									デザインの一貫性を確保するために、自社では独自のデザインシステムを実装中。<br>デザインチームとして他社の調査や当社の既存サービスのUIをベースにして、デザインの定義、作成、レビュー、そしてFigmaでのコンポーネント化を行う。
@@ -355,6 +352,21 @@
 									ウェブサイトのリニューアル、更新、修正、およびその他のニーズに関するプロダクトランディングページのデザインとコーディングを担当。<br>
 									LPページの設計からコーディングまでのエンドツーエンドのサポートを提供し、HubSpotでの実装を得意としている。
 								</p>
+								<p class="web-list-title">サイト一覧</p>
+								<ul class="web-list">
+									<li>
+										<a href="https://academy.sensyn-robotics.com/" target="_blank" class="web-link">academy.sensyn-robotics</a>
+									</li>
+									<li>
+										<a href="https://www.sensyn-robotics.com/service/rakurakudrone/" target="_blank" class="web-link">rakurakudrone</a>
+									</li>
+									<li>
+										<a href="https://gembaconnect.sensyn-robotics.com/" target="_blank" class="web-link">gembaconnect</a>
+									</li>
+									<li>
+										<a href="https://shoruira.sensyn-robotics.com/preregistration/" target="_blank" class="web-link">shoruira</a>
+									</li>
+								</ul>
 								<img src="img/homepage.png" alt="">
 							</div>
 							<!--4-->
@@ -369,7 +381,7 @@
 									<span>Figma</span>
 								</div>
 								<p>
-									企画メンバーからの要件をヒアリングし、BtoBプロダクト・プロジェクトのFigma UI画面を作成。
+									BtoBプロダクトおよび社内プロジェクトのUIデザインを担当し、Figmaを用いてワイヤーフレーム、ビジュアルデザイン、再利用可能なコンポーネントを作成。関係者と連携しながらデザインを進めました。
 								</p>
 								<img src="img/pd-pj.png" alt="">
 							</div>
@@ -399,7 +411,6 @@
 									デザインの部分で、いくつか同じデザインの派生ページが発生した為、マークアップ・スタイル記述はパーツを細分化して、どのブロックでも使えるレスポンシブサイト作成。
 								</p>
 								<img src="img/ec-site.png" alt="">
-								<a href="https://www.i-nobori.com/" target="_blank" class="to-page">View Website <i class="fa-solid fa-circle-arrow-right"></i></a>
 							</div>
 							<!--2-->
 							<div class="col">
